<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyBooks</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_book">Add Book</string>
    <string name="search_hint">Search books...</string>
    <string name="logout">Logout</string>
</resources>